--- a/src/main/resources/Api.properties
+++ b/src/main/resources/Api.properties
@@ -6,7 +6,7 @@ project.name =  Amazon
 language.code = en
 #country.code = IN
 
-auth.token = BQAYucofj9-qDFkU-tSqU5WNFBI_7qYsUmM5aRoKQ9Aq9K9S4KWb7EySjtxG_V9kmAWH7izixeilajpVxGsB8cNQjYlQfCFGjfomlBfdgRq1mtq-psc3x-bjiBRkRSVELHsKnMwMsT8npUF1-ZqARs8a56poyL6GIholM-JwJE0igbHuH8AQNUj259d6OM2_-kUPcfJeV6FULvc--LBpyAZB2kllkM2ApmWmUWTgHTZqtcKeMbkYWZARp1iq3lAX5l-LACWN52Mfi8lG
+auth.token = 123
 base.uri = https://api.spotify.com/v1
 createNewPlaylist = /users/31viksw235sx2g3ufcnad5m3xife/playlists
 getNewPlaylist = /playlists/4YdD1UNXIgQWgqxMhNuFQ6
